--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Task Lister - React</title>
   </head>
   <body>
+    <div id="title">
+      <h1>Our Task List</h1>
+      <p>What is important is seldom urgent and what is urgent is seldom important.</p>
+      <div class="right">
+        <small><i> - Dwight Eisenhower, 34th President of the United States</i></small>
+      </div>
+    </div>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
