can make lists, tasks, associate them

--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,8 @@
   <body>
     <div id="title">
       <h1>Our Task List</h1>
-      <p>What is important is seldom urgent and what is urgent is seldom important.</p>
-      <div class="right">
-        <small><i> - Dwight Eisenhower, 34th President of the United States</i></small>
-      </div>
+      <p>What is important is seldom urgent and what is urgent is seldom important.<small><i> - Dwight Eisenhower, 34th President of the United States</i></small></p>
     </div>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
